# treasury-take-home

./: .gitignore  AGENTS.md  PLAN.md  README.md  REQUIREMENTS.md  pyproject.toml
.railway/: railway.ts
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  constants.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  checklists.py  comparison.py  extraction.py  ocr.py  review.py
backend/tests/: README.md  test_batch_api.py  test_comparison.py  test_field_extraction.py  test_ocr_provider.py  test_review_api.py  test_review_pipeline.py  test_warning_validator.py
backend/tests/fixtures/labels/: README.md  clean-readable-label.expected.json  low-quality-label.expected.json  ordinary-field-punctuation-variation.expected.json  warning-capitalization-mismatch.expected.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  TEST_EXECUTION_STATUS.md
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
frontend/e2e/: README.md
frontend/src/: styles.css
frontend/src/lib/api/: client.test.ts  client.ts
frontend/src/lib/components/: ApplicationForm.svelte  BatchResultsTable.svelte  FileUpload.svelte  ResultsTable.svelte  resultsTable.ts
frontend/src/lib/components/__tests__/: README.md  ResultsTable.test.ts
frontend/src/lib/types/: api.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/api/: proxy.test.ts  proxy.ts
frontend/src/routes/batch/: +page.svelte  README.md
frontend/src/routes/review/: +page.svelte  README.md
(+5 files in other folders)
