[project]
name = "treasury-take-home-backend"
version = "0.1.0"
description = "FastAPI backend for alcohol label verification prototype"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.4",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
ocr = [
    "opencv-python-headless>=4.10.0.84",
    "Pillow>=10.4.0",
    "pytesseract>=0.3.13",
]
dev = [
    "httpx>=0.27.0",
    "opencv-python-headless>=4.10.0.84",
    "Pillow>=10.4.0",
    "pytesseract>=0.3.13",
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
